# tinycomiler

./: CMakeLists.txt  README.md  main.cpp  test.json  test1.json
Lexer/: context.cpp  context.h  lexer.cpp  lexer.h  symbol.h  tag.h  token.cpp  token.h
runtime/jsonparser/: CMakeLists.txt  json.h  jsonparser.cpp  jsonparser.h
runtime/lexer/: CMakeLists.txt  context.cpp  context.h  lexer.cpp  lexer.h  symbol.h  tag.h  token.cpp  token.h
